LPS-166343 Fixed The Breadcrumb Finder overlaps the modal compare runs

--- a/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/_liferay.scss
+++ b/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/_liferay.scss
@@ -9,6 +9,10 @@
 	padding: 0;
 }
 
+.compare-runs-popover {
+	z-index: 98;
+}
+
 .cursor-pointer {
 	cursor: pointer;
 }
